# cstructs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: bench.c
examples/: demo.c
include/: cstructs.h  list.h  map.h  queue.h  set.h  trie.h  vec.h
tests/: test_all.c
